# randexam

./: .gitignore  .pdm-python  2023_ej.py  2023_p2.py  2023_p3.py  README.md  p2020.py  p2021f1.py  p2021f2.py  p2021f3.py  p2022f1.py  p2022f3.py  p2023f1.py  p2023f2.py  p2023f3.py  p2024f1.py  p2024f2.py  p2024f3.py  p2025f1.py  p2025f2.py  p2025f3.py  pyproject.toml  requirements.txt  sample_exam.py  tag_push.sh  todo.md
.github/actions/setup/: action.yml
.github/workflows/: pipy.yml
2023/answers/: exam01_answers.md
2023/questions/: exam01_questions.md
assignments/answers/: p3_answers.md
assignments/questions/: p3_questions.md
data/: boxplot_facu.csv  boxplot_laura.csv  clustering.csv  clustering_c1.csv  clustering_c2.csv  clustering_c3.csv  estrellas_p3_d.xlsx  trabajos_ej4.csv  trabajos_ej4.xlsx
exams/2023/answers/: exam01_answers.md
exams/2023/questions/: exam01_questions.md
exams/2024_f1/answers/: exam01_answers.md
exams/2024_f1/questions/: exam01_questions.md
exams/2024_f2/answers/: exam01_answers.md
exams/2024_f2/questions/: exam01_questions.md
exams/2024_f3/answers/: exam01_answers.md
exams/2024_f3/questions/: exam01_questions.md
exams/2025_f1/answers/: exam01_answers.md
exams/2025_f1/questions/: exam01_questions.md
exams/2025_f2/answers/: exam01_answers.md
exams/2025_f2/questions/: exam01_questions.md
old_exam_generators/: p2020.py  p2021f2.py  p2021f3.py  p2022f1.py  p2022f3.py  p2023f1.py  p2023f2.py  p2023f3.py
p2021/p1/answers/: exam04_answers.md  exam05_answers.md  exam07_answers.md  exam08_answers.md  exam10_answers.md  exam11_answers.md  exam12_answers.md  exam13_answers.md  exam16_answers.md  (+16 more)
questions/: __init__.py  boxplot.py  clustering.py  clustering_generic.py  concepts.py  concepts_dynamic.py  correlation.py  discretization.py  info_gain.py  naivebayes.py  normalization.py  numerization.py  oner.py  perceptron.py  quantiles.py  rule_metrics.py
questions/naive_bayes/: model.py
questions/preprocessing/: __init__.py
questions/rules/: __init__.py
questions/trees/: __init__.py  tree_fit.py  tree_pandas.py  utils.py
sample_exam/answers/: exam01.md  test.pdf_answers.md
sample_exam/questions/: exam00.md  exam01.md  test.pdf_questions.md
samples/: exam.py
src/: __init__.py  exam.py  markdown.py
src/randexam/: __init__.py  data.py  exam.py  markdown.py  utils.py
test/: test_basic.py
test_generator/: __init__.py  data.py  exam.py  markdown.py
tests/: __init__.py
(+164 files in other folders)
