[project]
name = "randexam"
version = "0.1.0"
description = "Exam generator. Outputs markdown."
authors = [
    {name = "facundoq", email = "facundoq@gmail.com"},
]
dependencies = [
    "numpy",
    "pandas",
    "tqdm",
    "scipy",
    "matplotlib",
    "pypandoc",
    "openpyxl",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.setuptools]
py-modules = ['src']

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.uv.sources]
src = { workspace = true }
