[project]
name = "randexam"
version = "0.1.2"
description = "Exam generator. Outputs markdown."
authors = [
    {name = "facundoq", email = "facundoq@gmail.com"},
]
dependencies = [
    "numpy",
    "pandas",
    "tqdm",
    "scipy",
    "matplotlib",
    "pypandoc",
    "openpyxl",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.setuptools]
py-modules = ['src']

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.uv.sources]
src = { workspace = true }


[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
test = "uv run pytest src"
lint = "uvx ruff check --fix src"
format = "uvx ruff format src"
build = "uv build"
docs = "uv run sphinx-build docs docs/_build"
serve-docs = "uv run sphinx-autobuild --open-browser docs docs/_build"
precommit = "uv run pre-commit run --all-files"

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
    "pytest>=9.0.2",
]
